Add input element css styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="regForm">
 
-        <form>
+        <form action="www.petsmart.ca" method="get">
             <div class="statements">
                 <p>
                     This is NOT a real online service! Is your dog showing signs of 
