Add button syling and adjust right side height sizing

--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
                     </div>
                 </div>
 
+                <button id="createAccount">Create Account</button>
+
+
             </div>
 
-            <button>Create Account</button>
-
+            
             <p> Already have an account? 
                 <a href="https://www.youtube.com/watch?v=i1GmxMTwUgs">Log in</a>
             </p>
