--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             
-            <p> Already have an account? 
+            <p id="login"> Already have an account? 
                 <a href="https://www.youtube.com/watch?v=i1GmxMTwUgs">Log in</a>
             </p>
         </form>
