--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             
             <p id="login"> Already have an account? 
-                <a href="https://www.youtube.com/watch?v=i1GmxMTwUgs">Log in</a>
+                <a id="loginLink" href="https://www.youtube.com/watch?v=i1GmxMTwUgs">Log in</a>
             </p>
         </form>
     </div>
