--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                         
                         <div class="inputField">
-                            <labe>PASSWORD</labe>
+                            <label>PASSWORD</label>
                             <input type="text" required/>
                         </div>
                     </div>
