Increase .statements height on mobile view

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="inputField">
-                            <label>PHONE NUMBER (###-###-####)</label>
+                            <label>PHONE NUMBER [###-###-####]</label>
                             <input type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
                         </div>
 
