--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         </div>
 
                         <div class="inputField">
-                            <label>PHONE NUMBER [###-###-####]</label>
-                            <input type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
+                            <label>PHONE NUMBER</label>
+                            <input placeholder="### - ### - ####" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
                         </div>
 
                         <div class="inputField">
