change input type of passwords to password

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         
                         <div class="inputField">
                             <label>PASSWORD</label>
-                            <input type="text" required/>
+                            <input type="password" required/>
                         </div>
                     </div>
     
@@ -67,7 +67,7 @@
 
                         <div class="inputField">
                             <label>CONFIRM PASSWORD</label>
-                            <input type="text" required/>
+                            <input type="password" required/>
                         </div> 
                     </div>
                 </div>
