--- a/index.html
+++ b/index.html
@@ -39,35 +39,35 @@
 
                     <div class="leftEntries">
                         <div class="inputField">
-                            <label>FIRST NAME</label>
-                            <input type="text" required/> 
+                            <label for="first_name">FIRST NAME</label>
+                            <input id="first_name" name="first_name" type="text" required/> 
                         </div>
 
                         <div class="inputField">
-                            <label>EMAIL</label>
-                            <input type="email" required/>
+                            <label for="email">EMAIL</label>
+                            <input id="email" name="email" type="email" required/>
                         </div>
                         
                         <div class="inputField">
-                            <label>PASSWORD</label>
-                            <input type="password" required/>
+                            <label for="password">PASSWORD</label>
+                            <input id="password" name="password" type="password" required/>
                         </div>
                     </div>
     
                     <div class="rightEntries">
                         <div class="inputField">
-                            <label>LAST NAME</label>
-                            <input type="text" required/>
+                            <label for="last_name">LAST NAME</label>
+                            <input id="last_name" name="last_name" type="text" required/>
                         </div>
 
                         <div class="inputField">
-                            <label>PHONE NUMBER</label>
-                            <input placeholder="### - ### - ####" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input id="phone_number" name="phone_number" placeholder="### - ### - ####" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
                         </div>
 
                         <div class="inputField">
-                            <label>CONFIRM PASSWORD</label>
-                            <input type="password" required/>
+                            <label for="confirm_password">CONFIRM PASSWORD</label>
+                            <input id="confirm_password" name="confirm_password" type="password" required/>
                         </div> 
                     </div>
                 </div>
