--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                         <div class="inputField">
                             <label for="phone_number">PHONE NUMBER</label>
-                            <input id="phone_number" name="phone_number" placeholder="### - ### - ####" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
+                            <input id="phone_number" name="phone_number" placeholder="### - ### - ####" type="text" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required/>
                         </div>
 
                         <div class="inputField">
